# MemOS_Client

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  supervisord.conf
memos_client/: __init__.py  __main__.py  cli.py  models.py  types.py
memos_docker/: __main__.py  client.py
